Ports/jdk/jdk-jdk-18-10/test/langtools/tools/javac/T8187487/CrashWithDuplicateClassNamesTest.out
CrashWithDuplicateClassNamesTest.java:12:16: compiler.err.same.binary.name: C1$C2, C2
CrashWithDuplicateClassNamesTest.java:19:12: compiler.err.same.binary.name: C4, C3$C4
2 errors
